--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,7 @@
 							<option value="AB+" <%= @blood_type == "AB+" ? :selected : "" %>>AB+</option>
 							<option value="AB-" <%= @blood_type == "AB-" ? :selected : "" %>>AB-</option>
 						</select>
+						<input type="text" class="form-control" name="search[location]" placeholder="Location" value="<%= @location %>" />
 					</div>
 					<button type="submit" class="btn btn-default">Search</button>
 				</form>
