--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,6 +1,9 @@
 <script>
-  window.fbAsyncInit = function() { fbAsyncInit(); };
+window.fbAsyncInit = function() {
+	fbInit();
+};
 </script>
+
 <div class="container">
 	<div class="col-md-offset-3 col-md-6" style="margin-top:40px;background-color:#eee;padding:20px;border-radius:10px;">
 		<%= form_for :user, url: users_authenticate_path, :html => {:class => "form-horizontal" } do |f| %>
@@ -27,7 +30,7 @@
 		<% if @error %>
 			<p class="text-danger text-center">Invalid Username and/or Password.</p>
 		<% end %>
-		Or Login Using Facebook
+		Or Login Using Facebook:&nbsp;&nbsp;
 		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 		</fb:login-button>
 		<div id="fb-root"></div>
