--- a/app/views/donors/new.html.erb
+++ b/app/views/donors/new.html.erb
@@ -1,6 +1,8 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3" style="background-color:#eee;border-radius:10px;margin-top:20px;padding:40px 20px;">
 		<%= form_for :donor, url: donors_path, :html => {:class => "form-horizontal" } do |f| %>
+			<input type="hidden" name="donor[fb_id]" value="<%= @fb_id %>"/>
+			<% if !@fb_id %>
 			<div class="form-group">
 				<label class="col-sm-4 control-label">Username*: </label>
 				<div class="col-sm-8">
@@ -12,11 +14,14 @@
 				<div class="col-sm-8">
 					<input name="donor[password]" class="form-control" type="password" placeholder="Password" required />
 				</div>
-			</div>	
+			</div>
+			<% else %>
+			<h2>Complete your registration:</h2>
+			<% end %>
 			<div class="form-group">
 				<label class="col-sm-4 control-label">Name*: </label>
 				<div class="col-sm-8">
-					<input name="donor[name]" class="form-control" type="text" placeholder="Fullname" required />
+					<input name="donor[name]" class="form-control" type="text" placeholder="Fullname" required value="<%= @name %>" />
 				</div>
 			</div>
 			<div class="form-group">
